--- a/1/C/06.tex
+++ b/1/C/06.tex
@@ -1,5 +1,5 @@
+\chapter{光的波动性}\label{chapter-wave-nature-of-light}
 
-\chapter{光的波动性}
 从古代起，人们就已经熟悉光现象了．但是，光究竟是什么
 呢？这却是一个不容易回答的问题．人类对光的本性的认识，
 经历了漫长而曲折的道路，有一个辩证发展的过程，根据事
@@ -58,14 +58,15 @@
 
 1801年英国物理学家托马斯·杨（1773—1829）首先巧妙而简单地解决了相干光源的问题，成功地观察到
 了光的干涉现象．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-1.png}
-    \caption{杨氏实验}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-1.pdf}
+    \caption{杨氏实验}\label{fig_C_6-1}
+\end{figure}
 
 杨氏的办法是把点光源发出的一束光分成两束，以保证
 它们具有相同的频率和恒定的相，实验做法如下，让太阳
-光照射到一个有小孔的屏上（图6.1），这个小孔就成了一个
+光照射到一个有小孔的屏上（图~\ref{fig_C_6-1}），这个小孔就成了一个
 “点光源”，光从小孔出来后，照射到第二个屏的两个小孔上，
 这两个小孔离得很近，而且与前一小孔的距离相等，因此，如
 果光足某种波动，那么任何时刻从前一小孔发出的光波都会
@@ -76,20 +77,23 @@
 了预期的结果，在像屏上看到了彩色的干涉条纹．
 
 后来用狭缝代替小孔，用单色光代替太阳光来做实验，得
-到更清晰的明暗条纹，这就是著名的杨氏双缝干涉实验．图
-6.2是双缝干涉的装置和产生干涉图样的示意图．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1.2]{fig/6-2.pdf}
-    \caption{双缝干涉}
-    \end{figure}
-
-    \begin{figure}[htp]\centering
-\includegraphics[scale=1.1]{fig/6-3.pdf}
-\caption{}
+到更清晰的明暗条纹，这就是著名的杨氏双缝干涉实验．图~\ref{fig_C_6-2} 
+是双缝干涉的装置和产生干涉图样的示意图．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-2.pdf}
+    \caption{双缝干涉}\label{fig_C_6-2}
 \end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-3.pdf}
+    \caption{}\label{fig_C_6-3}
+\end{figure}
+
 微粒说不能解释光的干涉现象，波动说则可以作出完善
 的解释，并能够根据双缝的距离和缝到屏的距离以及波长计
-算出屏上出现明暗条纹的位置．图6.3是用波动说研究双缝
+算出屏上出现明暗条纹的位置．图~\ref{fig_C_6-3} 是用波动说研究双缝
 干涉的图，设两个缝$S_1$和$S_2$的距离为$d$，到屏的距离为$\ell$，且
 $\ell\gg d$．$O$是$S_1S_2$的中垂线与屏的交点，$O$到$S_1$、$S_2$的距离相
 等．从$S_1$、$S_2$射出的光波到达$O$点经过的路程相等，所以两
@@ -141,19 +145,21 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 种色光在真空中的速度都等于$c$，如果用$\nu$表示光波的频率；
 则有$c=\lambda\nu$．由于各种色光的波长不同，可见它们的频率也
 不相同．红光的波长最长，频率最小；紫光的波长最短，频率
-最大．下表是各种色光的频率和在真空中波长的范围：
-\begin{center}
+最大．表~\ref{tab_C_6-1} 是各种色光的频率和在真空中波长的范围：
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_C_6-1}
     \begin{tabular}{cccccc}
-        \hline
+        \toprule
         色光   &     波长    &    频率    &    色光    &    波长   &     频率     \\
         &（微米）&（$10^{14}$赫）&    &（微米）&（$10^{14}$赫）\\
-        \hline
+        \midrule
         红   &  0.77—0.62   &     3.9—4.8    &    绿&0.58—0.49    &    5.2—6.1\\
         橙   & 0.62—0.60    &    4.8—5.0     &   蓝—靛    &    0.49—0.45    &    6.1—6.7\\
         黄&0.60—0.58   &     5.0—5.2     &   紫      &  0.45—0.39      &  6.7—7.7\\
-        \hline
+        \bottomrule
     \end{tabular}
-\end{center}
+\end{table}
 
 光的波长也常用埃（\AA）作单位
 \[1\text{\AA}=10^{-10}{\rm m}\]
@@ -163,7 +169,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 \subsection{薄膜干涉}
 把金属丝圆环在肥皂液里蘸一下，环上就形
 成一层肥皂液薄膜、用单色光照射薄膜，薄膜上就产生明暗相
-间的干涉条纹（图6.4）．产生这种现象是由于照射到膜上的
+间的干涉条纹（图~\ref{fig_C_6-4}）．产生这种现象是由于照射到膜上的
 光会从膜的前表面和后表面分别反射回来，形成两列波，这两
 列波是由同一入射波产生的，因此频率相同，相差恒定，能够
 产生干涉，竖立的肥皂薄膜在重力作用下成为上薄下厚的楔
@@ -171,10 +177,11 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 （或者波谷和波谷）叠加，光振动加强，产生亮条纹；在另外一
 些地方，恰好波峰和波谷叠加，光振动削弱，产生暗条纹，这
 就是薄膜干涉的原因．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1]{fig/6-4.pdf}
-    \caption{肥皂液膜上光的干涉}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-4.pdf}
+    \caption{肥皂液膜上光的干涉}\label{fig_C_6-4}
+\end{figure}
 
 
 肥皂泡在太阳光照耀下会出现彩色的条纹，也是由薄膜
@@ -184,21 +191,32 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 另一色光的亮纹，这样，在薄膜上就出现了不同颜色的条纹．
 
 \subsection{检查精密零件的表面质量}
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-5.png}
-    \caption{用干涉法检查表面}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/C/6-5a.pdf}
+        \caption{}\label{fig_C_6-5a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/C/6-5b.pdf}
+        \caption{}\label{fig_C_6-5b}
+    \end{subfigure}
+    \caption{用干涉法检查表面}\label{fig_C_6-5}
+\end{figure}
 
 各种精密零件，例如光学元
 件，对表面加工的质量要求很高，一般精度要求在几分之一光
 波波长之内，这样的表面需要用干涉法来检验，如果被检查
 的表面是一个平面，可以在它的上面放一个透明的标准样板，
 并在一端垫一薄片，使样板的标准平面和被检查的平面间形
-成一个劈形的空气薄层（图6.5甲）．用单色光从上面照射，
+成一个劈形的空气薄层（图~\ref{fig_C_6-5a}）．用单色光从上面照射，
 入射光从空气层的上下表面反射出两列光波，于是从反射光
 中就会看到干涉条纹．如果被测表面是平的，产生的干涉条
 纹就是一组平行的直线；如果被测表面某些地方不平，产生的
-干涉条纹就要发生弯曲（图6.5乙）．从下涉条纹弯曲的方向
+干涉条纹就要发生弯曲（图~\ref{fig_C_6-5b}）．从下涉条纹弯曲的方向
 和程度还可以了解被测表面的不平情况．这种测量的精度可
 达$10^{-6}$厘米．
 
@@ -238,13 +256,14 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 息照相就是一种既记录反射光的强度，又记录反射光的位相
 的照相术，这种照相术记录的是光波的振幅和位相的全部信
 息，所以称为全息照相．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.7]{fig/6-6.png}
-    \caption{全息照相原理示意图}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-6.pdf}
+    \caption{全息照相原理示意图}\label{fig_C_6-6}
+\end{figure}
 
 全息照相是应用光的干涉来实现的．它用激光（是良好
-的相干光）作光源，全息照相的原理如图6.6所示，激光束
+的相干光）作光源，全息照相的原理如图~\ref{fig_C_6-6} 所示，激光束
 被分成两部分：一部分射向被摄物体，另一部分射向反射镜
 （这束光叫做参考光束），从物体上反射出来的光（叫做物光
 束）具有不同的振幅和位相，物光束和从反射镜来的参考光束
@@ -304,18 +323,35 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 根细丝时，就会出现衍射现象．
 
 取一个不透光的屏，在屏中间开一个较大的圆孔．用点
-光源照射，在像屏上就出现一个明亮的圆形光斑（图6.7甲）．
+光源照射，在像屏上就出现一个明亮的圆形光斑（图~\ref{fig_C_6-7a}）．
 显然，这是光沿直线传播的结果．圆孔小一些，可以看到像屏
-上的光斑也随着减小（图6.7乙）．但是，圆孔很小（直径小于
+上的光斑也随着减小（图~\ref{fig_C_6-7b}）．但是，圆孔很小（直径小于
 0.1毫米）时，像屏上的光斑不仅不减小，反而变大了，而且光
-斑的亮度也变得不均匀，成为一些明暗相间的圆环（图6.7
-丙）．这些圆环的面积，远远超过了光按直线传播所能照到的
+斑的亮度也变得不均匀，成为一些明暗相间的圆环（图~\ref{fig_C_6-7c}）．
+这些圆环的面积，远远超过了光按直线传播所能照到的
 范围，就是说光绕到小孔以外的区域中去了．这就是光通过
 小孔产生的衍射现象．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-7.png}
-    \caption{光通过小圆孔的衍射}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.8\linewidth}
+        \centering
+        \includegraphics{fig/C/6-7a.pdf}
+        \caption{}\label{fig_C_6-7a}
+    \end{subfigure}
+    \\
+    \begin{subfigure}{0.8\linewidth}
+        \centering
+        \includegraphics{fig/C/6-7b.pdf}
+        \caption{}\label{fig_C_6-7b}
+    \end{subfigure}
+    \\
+    \begin{subfigure}{0.8\linewidth}
+        \centering
+        \includegraphics{fig/C/6-7c.pdf}
+        \caption{}\label{fig_C_6-7c}
+    \end{subfigure}
+    \caption{光通过小圆孔的衍射}\label{fig_C_6-7}
+\end{figure}
 
 如果在不透明的屏上装一个宽度可以调节的狭缝，代替
 上面实验中的小圆孔，重做实验，可以看到：当缝比较宽时，光
@@ -334,19 +370,43 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 们从未看到过和听说过这种现象，因而认为这是荒谬的．于
 是微粒说的拥护者们认为可以驳倒波动说了．菲涅耳接受了
 这一挑战，精心研究，奇迹终于出现了，实验证明盘影的中心
-确实有亮斑（图6.8)．微粒说无法解释这种奇特的现象，而
+确实有亮斑（图~\ref{fig_C_6-8})．微粒说无法解释这种奇特的现象，而
 波动说却能作出完满的解释．菲涅耳的理论和实验使波动说
 获得了巨大的成功．
 
-\begin{figure}[htp]\centering
-\includegraphics[scale=1]{fig/6-8.jpg}
-\caption{不透明盘产生的衍射，影子的中心有一个亮斑（泊松亮斑）}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-8.jpg}
+    \caption{不透明盘产生的衍射，影子的中心有一个亮斑（泊松亮斑）}\label{fig_C_6-8}
 \end{figure}
 
 \subsection{衍射光栅}
-\begin{figure}[htp]\centering
-	\includegraphics[scale=.45]{fig/6-9.png}
-	\caption{衍射条纹随着缝数增加而变窄}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics[width=3.5cm]{fig/C/6-9a.png}
+        \caption{$1$缝}\label{fig_C_6-9a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics[width=3.5cm]{fig/C/6-9b.png}
+        \caption{$2$缝}\label{fig_C_6-9b}
+    \end{subfigure}
+    \\
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics[width=3.5cm]{fig/C/6-9c.png}
+        \caption{$5$缝}\label{fig_C_6-9c}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics[width=3.5cm]{fig/C/6-9d.png}
+        \caption{$20$缝}\label{fig_C_6-9d}
+    \end{subfigure}
+    \caption{衍射条纹随着缝数增加而变窄}\label{fig_C_6-9}
 \end{figure}
 
 光通过单狭缝产生的衍射条纹的位置跟光波
@@ -354,13 +414,13 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 的衍射条纹比较宽，测量的结果很不精确．为了精确测出光
 波的波长，可以增加缝数．因为缝数增加以后，从各条单缝衍
 射出来的光波要互相干涉，结果使明条纹变窄了．这个问题
-的具体分析比较复杂，我们在这里就不讲了．从图6.9中可
+的具体分析比较复杂，我们在这里就不讲了．从图~\ref{fig_C_6-9} 中可
 以清楚地看到明条纹随着缝数增加而变窄的情形．
 
 
 光学仪器中用的衍射光栅就是根据这个原理制成的．常
 用的透射光栅是在玻璃片上刻有许多等宽而又等间距的平行
-刻痕，其中刻痕是不透光的部分（图6.10）．实用的衍射光栅
+刻痕，其中刻痕是不透光的部分（图~\ref{fig_C_6-10}）．实用的衍射光栅
 一般在每毫米内有几十条乃至上千条狭缝．光栅产生的衍射
 条纹又窄又亮，可以精确地测
 定光波的波长，不同波长的光
@@ -370,10 +430,11 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 说，光栅跟棱镜一样具有分光
 作用，用它可以产生光谱，这也
 是光栅的一个用途．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-10.jpg}
-    \caption{衍射光栅}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[height=4cm]{fig/C/6-10.jpg}
+    \caption{衍射光栅}\label{fig_C_6-10}
+\end{figure}
 
 \subsection*{练习二}
 \begin{enumerate}
@@ -392,22 +453,34 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 光的干涉和衍射现象清楚地表明光是一种波，我们知道，
 波有纵波和横波，这两种波都能够产生干涉和衍射现象，那
 么，光波究竟是纵波还是横波呢？
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1]{fig/6-11.pdf}
-    \caption{横波的偏振}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.45\linewidth}
+        \centering
+        \includegraphics{fig/C/6-11a.pdf}
+        \caption{}\label{fig_C_6-11a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.45\linewidth}
+        \centering
+        \includegraphics{fig/C/6-11b.pdf}
+        \caption{}\label{fig_C_6-11b}
+    \end{subfigure}
+    \caption{横波的偏振}\label{fig_C_6-11}
+\end{figure}
 
 我们先用机械波来说明纵波和横波的主要区别，沿着绳
-传播的横波，如果在它传播的方向上放上带有狭缝的木板（图
-6.11），只要狭缝的方向跟绳的振动方向相同，绳上的横波就
+传播的横波，如果在它传播的方向上放上带有狭缝的木板（图~\ref{fig_C_6-11}），
+只要狭缝的方向跟绳的振动方向相同，绳上的横波就
 可以毫无阻碍地传过去；如果把狭缝的方向旋转90$^\circ$，绳上的
 横波就不能通过了，这种现象叫做横波的\textbf{偏振}．纵波是沿着
 波的传播方向振动的，不论狭缝方向如何，纵波都可以传过
-去，不会发生偏振现象（图6.12）．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1]{fig/6-12.pdf}
-    \caption{纵波没有偏振现象}
-    \end{figure}
+去，不会发生偏振现象（图~\ref{fig_C_6-12}）．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-12.pdf}
+    \caption{纵波没有偏振现象}\label{fig_C_6-12}
+\end{figure}
 
 光是否产生偏振现象呢？十九世纪法国科学家马吕（1775
 —1812）发现，光也能够产生偏振现象，我们可以用下面的方
@@ -421,13 +494,24 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 透射过来的光，就会发现，从第二个晶片透射过来的光的强度
 跟两晶片的相对方向有关，把前一晶片固定，以入射光线为
 轴旋转后一晶片时，从后一晶片透射过来的光的强度发生周
-期性的变化：后一晶片转到某一方向时，透射光最强（图6.13
-甲）；再旋转90$^\circ$，转到跟前一方向垂直时，透射光最弱，几乎
-等于零（图6.13乙）．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-13.png}
-    \caption{光的偏振}
-    \end{figure}
+期性的变化：后一晶片转到某一方向时，透射光最强（图~\ref{fig_C_6-13a}）；
+再旋转90$^\circ$，转到跟前一方向垂直时，透射光最弱，几乎
+等于零（图~\ref{fig_C_6-13b}）．
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.8\linewidth}
+        \centering
+        \includegraphics{fig/C/6-13a.pdf}
+        \caption{}\label{fig_C_6-13a}
+    \end{subfigure}
+    \\
+    \begin{subfigure}{0.8\linewidth}
+        \centering
+        \includegraphics{fig/C/6-13b.pdf}
+        \caption{}\label{fig_C_6-13b}
+    \end{subfigure}
+    \caption{光的偏振}\label{fig_C_6-13}
+\end{figure}
 
 把上述光现象跟机械波的偏振现象相比较，表明光通过
 品片时产生偏振现象．只有横波才产生偏振现象，所以光波
@@ -438,7 +522,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 光，并没有一个占优势的方向，也就是说，沿着各个方向振动
 的光波强度都相同，这种光叫做\textbf{自然光}．自然光通过第一个
 晶片（叫做起偏器）后，相当于被一个“狭缝”卡了一下，只有振
-动方向跟“狭缝”方向一致的光波才能通过（图6.13），这种振
+动方向跟“狭缝”方向一致的光波才能通过（图~\ref{fig_C_6-13}），这种振
 动方向一定的光叫做\textbf{偏振光}．每个偏振片上都有一条标线，表
 示的就是偏振片允许通过的偏振光的振动方向，这个方向叫
 做偏振片的偏振化方向，自然光通过第一个晶片后虽然变成
@@ -463,17 +547,18 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 车时，迎面开来的车灯的光常常使司机看不清路面，容易发生
 事故，如果在每辆汽车的车灯玻璃上和司机座席前面的窗玻
 璃上各安上一块偏振片，并使它们的偏振化方向都跟水平方
-向成45$^\circ$角（图6.14），就可以解决这个问题．这时，从对面
+向成45$^\circ$角（图~\ref{fig_C_6-14}），就可以解决这个问题．这时，从对面
 车灯射来的偏振光，由于振动方向跟司机自己座前窗玻璃上
 偏振片的偏振化方向垂直，所以不会射进司机眼里．而从自
 已的车灯射出去的偏振光，由于振动方向跟自己的窗玻璃上
 编振片的偏振化方向相同，所以司机仍能看清自己车灯照亮
 的路面和物体．
 
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.45]{fig/6-14.png}
-    \caption{汽车车灯和窗玻璃上的偏振片}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-14.pdf}
+    \caption{汽车车灯和窗玻璃上的偏振片}\label{fig_C_6-14}
+\end{figure}
 
 \section*{阅读材料：偏振光与立体电影}
 看立体电影，要戴上一副特殊的眼镜，这样从银幕上看到
@@ -495,7 +580,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 影机拍下的两组影片同步放映，使略有差别的两幅图像重叠
 在银幕上．这时如果用眼睛直接观看，看到的画面是模糊不
 清的，要看到立体电影，需要运用光的偏振知识，使两眼各看
-到一幅图像．在每架放映机前装一块偏振镜（图6.15），其作
+到一幅图像．在每架放映机前装一块偏振镜（图~\ref{fig_C_6-15}），其作
 用相当于起偏器，从两架放映机发出的带有影像的两束光，通
 过偏振镜后，就成了偏振光，左右两架放映机前的偏振镜的
 偏振化方向互相垂直，因此产生的两束偏振光的偏振方向也
@@ -506,10 +591,11 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 片的偏振化方向跟右边放映机前偏振镜的一致．这样，左眼
 只能看到左机映出的画面，右眼只能看到右机映出的画面，两
 眼看到的画面略有差别，因而产生立体感．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-15.png}
-    \caption{立体电影}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-15.pdf}
+    \caption{立体电影}\label{fig_C_6-15}
+\end{figure}
 
 \section{光的电磁说}
 十九世纪初，杨氏、菲涅耳等对光的干涉和衍射的研究，
@@ -621,7 +707,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 线．后来人们做了大量实验，发现高速电子流射到任何固体
 上，都会产生这种射线，并且从它产生的衍射现象知道它是波
 长很短的电磁波．为了纪念伦琴，就把这种射线叫做伦琴射
-线，图6.16是产生伦琴射线的装置，叫做伦琴射线管．图中
+线，图~\ref{fig_C_6-16} 是产生伦琴射线的装置，叫做伦琴射线管．图中
 的螺旋钨丝$K$是它的阴极，用钨或铂制成的电极$A$是它的阳
 极，又叫对阴极．管里的真空程度很高，气压约为$10^{-3}$—$10^{-5}$
 帕（$10^{-5}$—$10^{-7}$毫米汞柱），用电池组或变压器给钨丝K通
@@ -632,10 +718,11 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 的本领跟物质的密度有关系，在工业上可以用它来检查金属
 部件有没有砂眼、裂纹等缺陷，在医学上可以用它来透视人
 体，检查体内的病变和骨折的情况．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1.2]{fig/6-16.pdf}
-    \caption{伦琴射线管}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-16.pdf}
+    \caption{伦琴射线管}\label{fig_C_6-16}
+\end{figure}
 
 此外，还有比伦琴射线波长更短的电磁波，那就是放射性
 元素放出的$\gamma$射线，我们将在第九章学习．
@@ -643,7 +730,7 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 \subsection{电磁波谱}
 
 无线电波、红外线、可见光、紫外线、伦琴射
-线、$\gamma$射线合起来，构成了范围非常广阔的\textbf{电磁波谱}（图6.17），其中最长的波长是最短的波长的$10^{21}$倍以上，从图中
+线、$\gamma$射线合起来，构成了范围非常广阔的\textbf{电磁波谱}（图~\ref{fig_C_6-17}），其中最长的波长是最短的波长的$10^{21}$倍以上，从图中
 可以看出，各种电磁波的范围已经衔接起来，并且发生了交
 错，例如长波的红外线和微波已经重叠，短波的紫外线已经
 进入伦琴射线的区域，总的说来，从无线电波到$\gamma$射线，都是
@@ -653,10 +740,11 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 对波长越来越短的可见光、紫外线、伦琴射线、$\gamma$射线，要观察
 到它们的干涉、衍射现象，就越来越困难了．
 
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1]{fig/6-17.pdf}
-    \caption{电磁波谱}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-17.pdf}
+    \caption{电磁波谱}\label{fig_C_6-17}
+\end{figure}
 
 不同的电磁波产生的机理不同，无线电波是振荡电路中
 自由电子的运动产生的；红外线、可见光、紫外线是原子的外
@@ -671,13 +759,14 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 关于光谱的知识．
 
 \subsection{分光镜}
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.7]{fig/6-18.png}
-    \caption{分光镜构造原理示意图}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-18.pdf}
+    \caption{分光镜构造原理示意图}\label{fig_C_6-18}
+\end{figure}
 
 观察光谱要用分光镜，这里我们先讲一下分光
-镜的构造原理，图6.18是分光镜的构造原理示意图．它是
+镜的构造原理，图~\ref{fig_C_6-18} 是分光镜的构造原理示意图．它是
 由平行光管$A$、三棱镜$P$和望远镜筒$B$组成的．平行光管$A$的
 前方有一个宽度可以调节的狭缝$S$，它位于透镜$L_1$的焦平
 面\footnote{通过焦点垂直于透镜主光轴的平面，叫做透镜的焦平面．}处．从狭缝射入的光线经透镜$L_1$折射后，变成平行光线
@@ -701,12 +790,13 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
 明线光谱中的亮线叫做谱线，各条谱线对应于不同波长的光．
 稀薄气体或金属的蒸气的发射光谱是明线光谱．明线光谱是
 由游离状态的原子发射的，所以也叫\textbf{原子光谱}．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/6-19.png}
-    \caption{光谱管}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/6-19.pdf}
+    \caption{光谱管}\label{fig_C_6-19}
+\end{figure}
 
-观察气体的原子光谱，可以使用光谱管（图6.19），它是
+观察气体的原子光谱，可以使用光谱管（图~\ref{fig_C_6-19}），它是
 一支中间比较细的封闭的玻璃管，里面装有低压气体，管的两
 端有两个电极．把两个电极接到高压电源上，管里稀薄气体发
 生辉光放电，产生一定颜色的光．
@@ -788,11 +878,6 @@ $\lambda/2$的奇数倍，两列波到达$P$点时反相，因而互相削弱，
     的距离是0.05毫米，缝到屏的距离是1米，相邻两条暗纹间
     的距离是多大？
 \end{enumerate}
-
-
-
-
-
 
 
 
