--- a/1/C/07.tex
+++ b/1/C/07.tex
@@ -1,4 +1,5 @@
-\chapter{光的粒子性}
+\chapter{光的粒子性}\label{chapter-particle-nature-of-light}
+
 光的电磁说使光的波动理论发展到相当完美的地步，取
 得了巨大成就．但是，这个学说并不能完美地解释所有的光
 现象，还在赫兹用实验证实光的电磁说的时候，就已经发现了
@@ -13,26 +14,28 @@
 现象：当紫外线照射到圆环接收器间隙的电极上时，火花放电
 变得容易了，后来其他科学家又发现，用紫外线照射与验电
 器相连的带负电的锌板时，验电器的金箔便立即闭合．用紫
-外线照射与验电器相连的不带电的锌板时，验电器上带正电．
+外线照射与验电器相连的不带电的锌板时，验电器上带正电（图~\ref{fig_C_7-1}）．
 通过这些现象人们认识到，用紫外线照射金属时，电子会从金
 属表面飞出来．在紫外线照射下，赫兹实验中的电极变得容
 易放电，带负电的锌板失去电荷，不带电的锌板带上了正电，
 都是由于电子从金属表面飞出来了的缘故．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.6]{fig/7-1.png}
-    \caption{紫外线照射锌板使验电器带正电}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/7-1.pdf}
+    \caption{紫外线照射锌板使验电器带正电}\label{fig_C_7-1}
+\end{figure}
 
 在光的照射下物体中发射电子的现象，叫做\textbf{光电效应}．光
 电效应中发射出来的电子叫做\textbf{光电子}．实验表明，不仅紫外
 线能产生光电效应，对于碱金属，例如锂、钠、钾、铯等，用可见
 光照射也能产生光电效应．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1.2]{fig/7-2.pdf}
-    \caption{研究光电效应的装置简图}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/7-2.pdf}
+    \caption{研究光电效应的装置简图}\label{fig_C_7-2}
+\end{figure}
 
-图7.2是研究光电效应规律的实验装置简图，其中$S$是
+图~\ref{fig_C_7-2} 是研究光电效应规律的实验装置简图，其中$S$是
 抽成真空的容器，$C$是石英窗口，紫外光和可见光都可以通过
 它射到容器里的金属板$K$上．在$K$的对面有另一金属板$A$，$K$
 和$A$组成一对电极．象图中那样把$K$跟电池组的负极相连，
@@ -70,20 +73,23 @@ $\dfrac{1}{2}mv^2_m$
 的频率必须大于某一极限频率才能产生光电效应；低于这个
 极限频率的光，无论强度如何，照射时间多长，也不能产生光
 电效应}．
-下表是几种金属的极限频率$\nu_0$和波长$\lambda_0$．
-\begin{center}
+表~\ref{tab_C_7-1} 是几种金属的极限频率$\nu_0$和波长$\lambda_0$．
+
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_C_7-1}
     \begin{tabular}{cccccc}
-        \hline
+        \toprule
         金属& $\lambda_0$（微米）& $\nu_0$（赫）\\
-        \hline
-        铯&0.66&$4.545\x 10^{14}$ \\
-        钠&0.50&$6.000\x 10^{14}$\\
-        锌&0.37&$8.065\x 10^{14}$\\
-        银&0.26&$1.153\x 10^{15}$\\
-        铂& 0.20&$1.529\x 10^{15}$\\
-        \hline
+        \midrule
+        铯&0.66&$4.545\times 10^{14}$ \\
+        钠&0.50&$6.000\times 10^{14}$\\
+        锌&0.37&$8.065\times 10^{14}$\\
+        银&0.26&$1.153\times 10^{15}$\\
+        铂& 0.20&$1.529\times 10^{15}$\\
+        \bottomrule
     \end{tabular}
-\end{center}
+\end{table}
 
 
 
@@ -103,7 +109,7 @@ $\dfrac{1}{2}mv^2_m$
 磁辐射的能量是不连续的，而是一份一份地进行的，每一份的
 能量是$h\nu$，其中$\nu$是辐射的频率，是一个普适恒量，理论计
 算的结果才能跟实验事实很好地符合．这个$h$后来就叫做\textbf{普
-朗克恒量}，实验测出$h=6.63\x10^{-34}{\rm J}\cdot {\rm s}$，在普朗克的量
+朗克恒量}，实验测出$h=6.63\times10^{-34}{\rm J}\cdot {\rm s}$，在普朗克的量
 子说的启发下，爱因斯坦天才地预见到，为了解释光电效应必
 须假设光也是不连续的，而是一份一份的，每一份光叫做一个
 \textbf{光子}，光子的能量跟它的频率成正比，即$E=h\nu$，其中的$h$是
@@ -143,7 +149,7 @@ $\dfrac{1}{2}mv^2_m$
 米，这种光子的能量是多少电子伏？锌的逸出功是多少？
 \item 可见光的光子，能量范围是多大（用电子伏表示）？为
 什么用可见光不能使锌板产生光电效应？
-\item 铯的逸出功是$3.0\x10^{-19}$焦，用波长是0.59微米的
+\item 铯的逸出功是$3.0\times10^{-19}$焦，用波长是0.59微米的
 黄光照射铯，电子从绝表面飞出的最大初动能是多大？
 \item 钨的逸出功是4.52电子伏，使钨产生光电效应的最
 长波长是多少？这种波长是可见光吗？
@@ -156,33 +162,45 @@ $\dfrac{1}{2}mv^2_m$
 术和文化生活领域内得到了广泛的应用，光电管就是应用最
 普遍的一种光电器件．
 
-光电管的类型很多．图7.3甲是其中的一种，玻璃泡里
+光电管的类型很多．图~\ref{fig_C_7-3a} 是其中的一种，玻璃泡里
 的空气已经抽出，有的管里充有少量的惰性气体（如氩、氖、氦
 等），管的内半壁涂有逸出功小的碱金属作为阴极$K$，管内
-另有一阳极$A$．使用时照图7.3乙那样把它连在电路里，当
+另有一阳极$A$．使用时照图~\ref{fig_C_7-3b} 那样把它连在电路里，当
 光照射到光电管的阴极$K$时，阴极发射电子，电路里就产生电
 流，光电管不能受强光照射，否则容易老化失效．光电管产生
 的电流很弱，应用时可以用放大器把它放大．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.7]{fig/7-3.png}
-    \caption{光电管}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/C/7-3a.pdf}
+        \caption{}\label{fig_C_7-3a}
+    \end{subfigure}
+    \hfil
+    \begin{subfigure}{0.4\linewidth}
+        \centering
+        \includegraphics{fig/C/7-3b.pdf}
+        \caption{}\label{fig_C_7-3b}
+    \end{subfigure}
+    \caption{光电管}\label{fig_C_7-3}
+\end{figure}
 
 下面举例说明光电管的应用．
 
 \subsection{光控继电器}
 
 工业生产中的大部分光电控制设备都用光
-控继电器．图7.4是光控继电器的示意图，它由电源、光电
+控继电器．图~\ref{fig_C_7-4} 是光控继电器的示意图，它由电源、光电
 管、放大器、电磁继电器几部分组成．当光照射光电管时，光
 放大器电管电路中便产生电流，经放大器放大后，使电磁铁$M$磁化，
 把衔铁$N$吸住；没有光照射光电管时，电路中没有电流，衔铁
 $N$在弹簧的作用下就自动离开$M$．如果把衔铁$N$跟控制机构
 相连，就可以达到自动控制的目的．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=1.2]{fig/7-4.PDF}
-    \caption{光控继电器示意图}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/7-4.pdf}
+    \caption{光控继电器示意图}\label{fig_C_7-4}
+\end{figure}
 
 
 光控继电器在工业上可以用于产品的自动计数、安全生
@@ -272,13 +290,13 @@ $$p=\frac{h}{\lambda}$$
 
 无线电波的频率较低，波长较长，这种电磁波的“光子”的
 能量很低，以频率为1兆赫的无线电波来说，它的“光子”的能
-量只有$4\x10^{-9}$电子伏，能量这样低，只有非常大量的“光
+量只有$4\times10^{-9}$电子伏，能量这样低，只有非常大量的“光
 子”才能使接收装置发生反应．较好的接收机大约要每秒收
 到$10^{10}$个这样的“光子”才起作用，所以，这部分电磁波的波
 动性很容易观察到，要观察这部分电磁波的粒子性，觉察个别
 “光子”的作用，却是非常不容易的．
 
-可见光的频率范围大致是$4\x10^{14}$—$8\x10^{14}$赫，这种光
+可见光的频率范围大致是$4\times10^{14}$—$8\times10^{14}$赫，这种光
 子的能量大约是几个电子伏．人造的仪器设备既可以比较容
 易地探测到大量的这种光子的作用，也可以比较容易地探测
 到少数这种光子的作用，因此这种电磁波的波、动性和粒子性
@@ -310,50 +328,51 @@ $$p=\frac{h}{\lambda}$$
 这个关系式后来就叫做德布罗意公式．
 
 从德布罗意公式很容易算出运动粒子的波长．例如，电
-子的电荷是$1.6\x10^{-19}$
-库，质量是$0.91\x10^{-30}$千克，经过200
+子的电荷是$1.6\times10^{-19}$
+库，质量是$0.91\times10^{-30}$千克，经过200
 伏电势差加速的电子获得的能量
-\[E=Ue=200\x1.6\x10^{-19}=3.2\x10^{-17}{\rm J}\]
+\[E=Ue=200\times1.6\times10^{-19}=3.2\times10^{-17}{\rm J}\]
 这个能量就是电子的动能，即
-\[\dfrac{1}{2}mv^2=3.2\x10^{-17}{\rm J} \]
+\[\dfrac{1}{2}mv^2=3.2\times10^{-17}{\rm J} \]
 因此
-\[v=\sqrt{\frac{2\x 3.2\x10^{-17}}{0.91\x 10^{-30}}}=8.4\x10^6\ms \]
+\[v=\sqrt{\frac{2\times 3.2\times10^{-17}}{0.91\times 10^{-30}}}=8.4\times10^6\Ums \]
 于是，按照德布罗意公式这运动电子的波长是
 \[\begin{split}
-    \lambda=\dfrac{h}{mv}&=\frac{6.63\x 10^{-34}}{0.91\x10^{-30}\x8.4\x 10^6}{\rm m} \\
-&=8.7\x10^{-11}{\rm m}=0.87\text{\AA}
+    \lambda=\dfrac{h}{mv}&=\frac{6.63\times 10^{-34}}{0.91\times10^{-30}\times8.4\times 10^6}{\rm m} \\
+&=8.7\times10^{-11}{\rm m}=0.87\text{\AA}
 \end{split}\]
 我们看到，这个波长与伦琴射线的波长相仿．前面讲过，这样
 短的波长，只有用晶体做衍射光栅才能观察到衍射现象．后
 来人们的确用这种办法观察到了电子的衍射，从而证明了德
 布罗意假说的正确性．
-\begin{figure}[htp]\centering
-    \includegraphics[scale=.7]{fig/7-5.png}
-    \caption{电子衍射实验示意图}
-    \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/C/7-5.pdf}
+    \caption{电子衍射实验示意图}\label{fig_C_7-5}
+\end{figure}
 
-图7.5是一种电子衍射实验的示意图，从灯丝$K$发射出
+图~\ref{fig_C_7-5} 是一种电子衍射实验的示意图，从灯丝$K$发射出
 的电子经过电势差为$U$的加速电场，然后通过一组栏板$D$的
 小孔，成为很细的电子束射到铝箔$M$上，在铝箔的后面放一
-张照相底片$P$，于是就得到图7.6所示的照片，在中央斑点
+张照相底片$P$，于是就得到图~\ref{fig_C_7-6} 所示的照片，在中央斑点
 的周围出现了环形的明暗相间的花纹．这个衍射图样跟伦琴
-射线穿过同一铝箔后产生的衍射图样（图7.7）非常相似，这
+射线穿过同一铝箔后产生的衍射图样（图~\ref{fig_C_7-7}）非常相似，这
 是电子具有波动性的证明．根据铝箔原子间的距离、加速电
 势差和衍射条纹的几何图形，还可以算出电子衍射时的波长，
 实测结果跟德布罗意公式相符．
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
     \begin{minipage}[t]{0.48\textwidth}
-    \centering
-    \includegraphics[scale=.8]{fig/7-6.jpg}
-    \caption{电子衍射图样}
+        \centering
+        \includegraphics[height=3.3cm]{fig/C/7-6.jpg}
+        \caption{电子衍射图样}\label{fig_C_7-6}
     \end{minipage}
     \begin{minipage}[t]{0.48\textwidth}
-    \centering
-    \includegraphics[scale=.8]{fig/7-7.jpg}
-    \caption{伦琴射线衍射图样}
+        \centering
+        \includegraphics[height=3.3cm]{fig/C/7-7.jpg}
+        \caption{伦琴射线衍射图样}\label{fig_C_7-7}
     \end{minipage}
-    \end{figure}
+\end{figure}
 
 
 后来人们又用原子射线和分子射线做类似的实验，同样
@@ -372,7 +391,7 @@ $$p=\frac{h}{\lambda}$$
 质波乃是一种几率波}．
 
 牛顿力学完全不能解释电子等微观粒子的衍射现象，用
-物质波的统计解释却很容易说明这种现象，在图7.5的实验
+物质波的统计解释却很容易说明这种现象，在图~\ref{fig_C_7-5} 的实验
 里，电子流通过金属箔片以后，物质波发生衍射，有的地方由
 于波的叠加而使物质波的强度增大，电子到达这里的几率就
 大，因而到达这里的电子数较多，有的地方由于波的叠加而
@@ -404,34 +423,15 @@ $$p=\frac{h}{\lambda}$$
 \begin{enumerate}
     \item 功率为1瓦的手电筒灯泡大约有5\%的电能转化为
 可见光，试估算它1秒钟能释放出多少个可见光的光子．
-\item 使铜产生光电效应的最低频率是$1.1\x10^{15}$
-赫，用频率为$1.5\x10^{15}$赫的紫外线照射铜时，它发射出的光电子的
+\item 使铜产生光电效应的最低频率是$1.1\times10^{15}$
+赫，用频率为$1.5\times10^{15}$赫的紫外线照射铜时，它发射出的光电子的
 最大速度是多大？
-\item 一个质量为$4\x10^{-4}$克的尘埃颗粒，以$1{\rm cm}/{\rm s}$
+\item 一个质量为$4\times10^{-4}$克的尘埃颗粒，以$1{\rm cm}/{\rm s}$
 的速度在空气中下落，计算它的德布罗意波长．
-\item 计算速度为$10^3\ms$的中子的德布罗意波长．这
-个波长跟$\gamma$射线的波长相比如何？中子的质量是$1.67\x10^{-27}$
+\item 计算速度为$10^3\Ums$的中子的德布罗意波长．这
+个波长跟$\gamma$射线的波长相比如何？中子的质量是$1.67\times10^{-27}$
 kg．
 \end{enumerate}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
