--- a/physics.tex
+++ b/physics.tex
@@ -96,8 +96,8 @@
 	%\include{1/C/04} %电磁振荡和电磁波
 	%\include{1/C/05} %光的反射和折射
 	%\include{1/C/06} %光的波动性
-	\include{1/C/07} %光的粒子性
-	%\include{1/C/08} %原子结构
+	%\include{1/C/07} %光的粒子性
+	\include{1/C/08} %原子结构
 	%\include{1/C/09} %原子核
 	
 	%\include{1/C/app_01} %学生实验
