--- a/physics.tex
+++ b/physics.tex
@@ -98,13 +98,13 @@
 	%\include{1/C/06} %光的波动性
 	%\include{1/C/07} %光的粒子性
 	%\include{1/C/08} %原子结构
-	\include{1/C/09} %原子核
+	%\include{1/C/09} %原子核
 	
-	%\include{1/C/app_01} %学生实验
-	%\include{1/C/app_02} %课外实验活动
+	\include{1/C/app_01} %学生实验
+	\include{1/C/app_02} %课外实验活动
 	
-	%\appendix
-	%\include{1/C/app_03} %附录
+	\appendix
+	\include{1/C/app_03} %附录
 	
 \end{document}
 
