--- a/fig/A/7-22.tex
+++ b/fig/A/7-22.tex
@@ -27,6 +27,6 @@
   \draw [ball color=white] (0,-4) circle (2pt)node[above right]{$O$};
   \draw [ball color=white] (-2.2,-4/1.414) circle (2pt)node[above]{$C_1$};
   \draw [ball color=white] (-1.6,-4/1.414) circle (2pt)node[above]{$C_2$};
-  \draw [|<->|](.18,.18) -- (2*1.414+.18, -2*1.414+.18) node [midway,above]{$l$};
+  \draw [|<->|](.18,.18) -- (2*1.414+.18, -2*1.414+.18) node [midway,above]{$\ell$};
 \end{tikzpicture}
 \end{document}
