--- a/physics.tex
+++ b/physics.tex
@@ -31,7 +31,7 @@
 	%\include{1/A/04} %曲线运动
 	%\include{1/A/05} %万有引力定律
 	%\include{1/A/06} %物体的平衡
-	%\include{1/A/07} %机械能
+	\include{1/A/07} %机械能
 	%\include{1/A/08} %动量
 	%\include{1/A/09} %机械振动和机械波
 	
@@ -100,11 +100,11 @@
 	%\include{1/C/08} %原子结构
 	%\include{1/C/09} %原子核
 	
-	\include{1/C/app_01} %学生实验
-	\include{1/C/app_02} %课外实验活动
+	%\include{1/C/app_01} %学生实验
+	%\include{1/C/app_02} %课外实验活动
 	
-	\appendix
-	\include{1/C/app_03} %附录
+	%\appendix
+	%\include{1/C/app_03} %附录
 	
 \end{document}
 
