--- a/physics.tex
+++ b/physics.tex
@@ -31,8 +31,8 @@
 	%\include{1/A/04} %曲线运动
 	%\include{1/A/05} %万有引力定律
 	%\include{1/A/06} %物体的平衡
-	\include{1/A/07} %机械能
-	%\include{1/A/08} %动量
+	%\include{1/A/07} %机械能
+	\include{1/A/08} %动量
 	%\include{1/A/09} %机械振动和机械波
 	
 	%\include{1/A/app_01} %学生实验
