--- a/fig/A/9-3.tex
+++ b/fig/A/9-3.tex
@@ -44,7 +44,7 @@
   \tkzLabelPoints[right=4pt](B)
   \tkzMarkAngles[mark=none, size=.9](O,O',P)
   \tkzLabelAngle[pos=1.1](O,O',P){$\alpha$}
-  \tkzLabelSegment[right](O',P){$l$}
+  \tkzLabelSegment[right](O',P){$\ell$}
   \tkzLabelPoint[below](G3){$G$}
   \tkzLabelPoint[right](P'){$F'$}
   \tkzLabelPoint[right](P''){$T$}
