--- a/fig/A/9-4.tex
+++ b/fig/A/9-4.tex
@@ -20,10 +20,10 @@
   \draw[shade] (2.5,-3) circle  (3pt);
   \draw[shade] (-3+.3,-2.7) circle  (3pt);
   \draw[shade] (0-.3,-2.7) circle  (3pt);
-  \draw (-3.5,-.7) arc (270:285:.7) node [midway,below]{$\theta_1$};
-  \draw (.5,-.7) arc (270:255:.7)   node [midway,below]{$\theta_1$};
+  \draw (-3.5,-.7) arc (270:285:.7) node [left=0.15cm] {$\theta_1$};
+  \draw (.5,-.7) arc (270:255:.7)   node [right=0.15cm]{$\theta_1$};
   \draw [<-](-3.5,-3.25) arc (270:285:3.25);
-  \draw [->](.5,-3.25) arc (270:255:3.25);
+  \draw [<-](.5,-3.25) arc (270:255:3.25);
   \draw [->](-1.5,-3.25)--(-2,-3.25);
   \draw [<-](3,-3.25)--(2.5,-3.25);
   \node at (-4,-4){~~};
@@ -40,10 +40,10 @@
     \draw[shade] (2.5,-3) circle  (3pt);
     \draw[shade] (-3+.6,-2.8) circle  (3pt);
     \draw[shade] (0-.6,-2.8) circle  (3pt);
-    \draw (-3.5,-.7) arc (270:290:.7) node [midway,below]{$\theta_2$};
-    \draw (.5,-.7) arc (270:250:.7)   node [midway,below]{$\theta_2$};
+    \draw (-3.5,-.7) arc (270:290:.7) node [left=0.2cm]{$\theta_2$};
+    \draw (.5,-.7) arc (270:250:.7)   node [right=0.2cm]{$\theta_2$};
     \draw [<-](-3.5,-3.25) arc (270:285:3.25);
-    \draw [->](.5,-3.25) arc (270:255:3.25);
+    \draw [<-](.5,-3.25) arc (270:255:3.25);
     \draw [->](-1.5,-3.25)--(-2,-3.25);
     \draw [<-](3,-3.25)--(2.5,-3.25);
     \node at (-3.5,-4){$t=0$};\node at (-1.5,-4){$t=\dfrac{1}{4}T$};
