--- a/fig/A/9-5.tex
+++ b/fig/A/9-5.tex
@@ -20,10 +20,10 @@
   \draw[shade] (2.5,-3) circle  (3pt);
   \draw[shade] (-3+.3,-2.7) circle  (3pt);
   \draw[shade] (0-.3,-2.7) circle  (3pt);
-  \draw (-3.5,-.5) arc (270:285:.5) node [below]{$\theta_1$};
-  \draw (.5,-.5) arc (270:255:.5) node [below]{$\theta_1$};
+  \draw (-3.5,-.5) arc (270:285:.5) node [left=0.15cm]{$\theta_1$};
+  \draw (.5,-.5) arc (270:255:.5) node [right=0.15cm]{$\theta_1$};
   \draw [<-](-3.5,-3.25) arc (270:285:3.25);
-  \draw [->](.5,-3.25) arc (270:255:3.25);
+  \draw [<-](.5,-3.25) arc (270:255:3.25);
   \draw [->](-1.5,-3.25)--(-2,-3.25);
   \draw [<-](3,-3.25)--(2.5,-3.25);
   \node at (-4,-4){~~};
@@ -40,8 +40,8 @@
     \draw[shade] (2.5,-3) circle  (3pt);
     \draw[shade] (-3.5-1.2,-2.8) circle  (3pt);
     \draw[shade] (.5+1.2,-2.8) circle  (3pt);
-    \draw (-3.5,-.5) arc (270:245:.5) node [below]{$\theta_2$};
-    \draw (.5,-.5) arc (270:295:.5) node [below]{$\theta_2$};
+    \draw (-3.5,-.5) arc (270:245:.5) node [right=0.2cm]{$\theta_2$};
+    \draw (.5,-.5) arc (270:295:.5) node [left=0.2cm]{$\theta_2$};
     \draw [<-](-3.5,-3.25) arc (270:250:3.25);
     \draw [<-](.5,-3.25) arc (270:290:3.25);
     \draw [<-](-1.2,-3.25)--(-1.7,-3.25);
