--- a/fig/A/9-26.tex
+++ b/fig/A/9-26.tex
@@ -12,14 +12,14 @@
   % \useasboundingbox(-0.5,1.34)rectangle(7.55,-1.47);
   \foreach \x in {0.3,2.8,5.3}
   {
-    \fill[left color=cyan!90!lightgray,right color=cyan!90!lightgray,middle color=cyan!40!lightgray!50](\x,0)rectangle++(2.5,1.2);
+    \fill[left color=black,right color=black,middle color=lightgray!90](\x,0)rectangle++(2.5,1.2);
   }
   % \draw(0.3,0)rectangle(8,1.2);
   \begin{scope}[scale=0.55]
     \fill[gray](0.1,-0.45)rectangle(-0.1,-1.5);
     \fill[top color=lightgray,bottom color=gray](-0.4,0)arc(180:360:0.4)--++(0,0.3)--++(0.2,0)--++(0,-0.3)arc(0:-180:0.6)--++(0,0.3)--++(0.2,0)--cycle;
-    \fill[bottom color=lightgray,top color=white](0.6,0.3)arc(0:10:13)--++(190:0.2)arc(10:0:12.8);
-    \fill[bottom color=lightgray,top color=white](-0.4,0.3)arc(180:170:12.8)--++(170:0.2)arc(170:180:13);
+    \filldraw[draw=gray,bottom color=lightgray,top color=white](0.6,0.3)arc(0:10:13)--++(190:0.2)arc(10:0:12.8);
+    \filldraw[draw=gray,bottom color=lightgray,top color=white](-0.4,0.3)arc(180:170:12.8)--++(170:0.2)arc(170:180:13);
     \fill[bottom color=lightgray,top color=gray](-0.4,0.3)arc(0:10:13)--++(190:0.2)arc(10:0:12.8);
     \fill[bottom color=lightgray,top color=gray](0.6,0.3)arc(180:170:12.8)--++(170:0.2)arc(170:180:13);
   \end{scope}
