--- a/fig/A/9-6.tex
+++ b/fig/A/9-6.tex
@@ -34,7 +34,7 @@
 \end{scope}
 \begin{scope}[canvas is zx plane at y=0]
   \draw[fill=brown9](0,-1.2)rectangle(5.6,1.2);
-  \draw[densely dashed](0,0)node[below left]{$O'$}--(5.6,0)node[below right]{$O$};
+  \draw[densely dashed](0,0)node[below left]{$t$}--(5.6,0)node[below right]{$O$};
   \draw(5.6,0.2)arc(90:-90:0.1 and 0.2);
   \draw[->](5.7,0)--++(0.5,0);
   \wave
